# pugnlp

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  README.md  README.rst  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  journal_sentiment.md  journal_sentiment.py
pug_nlp/: charlist.py  constant.py  futil.py  regex.py  segmentation.py  skeleton.py  stats.py  tutil.py  util.py
pugnlp/: __init__.py  constants.py  data.py  futil.py  plots.py  regexes.py  segmentation.py  skeleton.py  stats.py  tutil.py  util.py
pugnlp/data/: ascii-equivalents.csv  emojione-activities.txt  emojione-animals-and-nature.txt  emojione-objects.txt  emojione-travel-and-places.txt  emoticons-from-wikipedia.csv  mavis-batey-greetings.txt  mavis-batey-sentences.txt
pugnlp/scripts/: delint_working_dir  flake8.cfg  mavis_greetings.py
scripts/: mavis_greetings.py
src/pugnlp/: __init__.py  charlist.py  constants.py  data.py  detector_morse.py  futil.py  penn_treebank_tokenizer.py  plots.py  regexes.py  segmentation.py  sentence_segmentation.py  skeleton.py  stats.py  tutil.py  util.py
src/pugnlp/data/: ascii-equivalents.ods  emojione-flags.txt  emojione-food-and-drink.txt  emojione-smilies.txt  emojione-symbols.txt  emoticons-from-wikipedia.ods  goodreads-omniscient-books.txt
src/pugnlp/scripts/: bon_lsi.py  delint_working_dir
tests/: conftest.py  test_charlist.py  test_constant.py  test_constants.py  test_doctests.py  test_futil.py  test_regex.py  test_regexes.py  test_segmentation.py  test_skeleton.py  test_stats.py  test_util.py  travis_install.sh
