# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pugnlp
description = Python Natural Language Processing by and for the Python User Group in Portland, OR
author = Hobson Lane et al
author-email = github@totalgood.com
license = mit
url = http://github.com/totalgood/pugnlp/
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon-separated), e.g.
install_requires = coverage; future; fuzzywuzzy; jupyter; matplotlib; nltk; nlup==0.5; pandas; pip; pypandoc; python-Levenshtein; python-slugify; scikit-learn; scipy; plotly; seaborn; tqdm; wheel; gensim;
# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pugnlp[PDF]` like:
# PDF = ReportLab; RXP

# [test]
# py.test options when running `python setup.py test`
# addopts =
#     -c pytest.ini

[tool:pytest]
addopts =
    --doctest-modules
    --cov pugnlp --cov-report term-missing
    --cov-config .coveragerc
    --verbose
testpaths =
    tests
norecursedirs =
    dist
    build
    .tox
console_output_style =
    progress
doctest_optionflags =
    ELLIPSIS
    NORMALIZE_WHITESPACE

[aliases]
docs = build_sphinx
release = sdist bdist_wheel upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0.2
package = pugnlp
extensions =
    travis
    pre_commit
